@@ -1,5 +1,6 @@
 package com.clickme.security;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -13,13 +14,20 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
 
 import com.clickme.security.jwt.JwtAuthenticationEntryPoint;
+
+import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
 public class SecurityConfig {
+
+    // Comma-separated list of allowed origins.
+    // Set ALLOWED_ORIGINS env var on Render to include your Netlify URL.
+    // e.g. ALLOWED_ORIGINS=https://your-app.netlify.app,http://localhost:5173
+    @Value("${allowed.origins:http://localhost:5173,http://localhost:5174}")
+    private String allowedOriginsRaw;
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final JwtAuthenticationEntryPoint authenticationEntryPoint;
@@ -67,12 +75,23 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+        // Parse the comma-separated origins list from the environment variable
+        List<String> allowedOrigins = List.of(allowedOriginsRaw.split(","))
+                .stream()
+                .map(String::trim)
+                .toList();
+
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*")); // Allow Netlify and Localhost
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true);
-        
+        // Use explicit origins (not wildcard) so browsers accept the response.
+        // allowCredentials(true) + "*" is rejected by browsers; we don't need
+        // credentials mode since we use Authorization headers (Bearer JWT).
+        configuration.setAllowedOrigins(allowedOrigins);
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("Authorization"));
+        // Do NOT set allowCredentials(true) — Bearer tokens are sent in the
+        // Authorization header, not cookies, so credentials mode is not required.
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -85,4 +104,4 @@ public class SecurityConfig {
 
         return configuration.getAuthenticationManager();
     }
-}
+}
